--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2503,107 +2503,107 @@ stories:
   domain: http://www.chicagotribune.com/
   link: http://www.chicagotribune.com/entertainment/music/ct-ent-confederate-railroad-removed-from-illinois-fair-lineup-20190710-47oh3edbnbhlxkptziburmne2u-story.html
 images:
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alberto-giacometti.jpg
-- name: castle-wall-DSC-0067-pablo-blue.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-pablo-blue.JPG
-- name: berlinwall-DSC-0084-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purple-pond.jpg
-- name: downtheline-downtheline-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-yellow-paper.jpg
-- name: paris-paris-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-kand-two.jpg
-- name: crow_colorful_dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_dream.jpg
-- name: dragon-desert-desert-dragon-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-cinnamon-rolls.jpg
-- name: old-gas-pumps-oldgaspumps-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-far-away.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
-- name: gypsy-wagon-gypsywagon-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-atari-asteroids.jpg
-- name: crow_dry_skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dry_skin.jpg
-- name: san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
-- name: aws-s3-square-64-132-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-132-800-500-0-max-0--5--1.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
-- name: walled-garden-walled-garden-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-kand-two.jpg
-- name: oldcabin-store-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-sand-paper.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley.png
-- name: beach-clouds-lifeguard-beachclouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-dali.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-aqua.jpg
-- name: adam-smith-adam-smith-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-far-away.jpg
-- name: rockingchair-face-2-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-emily-carr.jpg
-- name: old-cabin-oldcabin-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-clean-view.jpg
-- name: downtown-trucksilo-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-post-modern.jpg
-- name: bordercrossing-bordercrossing-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-soul.jpg
-- name: windowmountain-window-mountain-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-bright-sand.jpg
-- name: white-house-whitehouse-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-cinnamon-rolls.jpg
-- name: meadowbutterfly-meadow-butterfly-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-smooth-ride.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
-- name: store-on-corner-oldcabin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-soul.jpg
-- name: locked-up-steam-lock-up-steam-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-5.jpg
-- name: meadowbutterfly-meadow-butterfly-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-colored-circuits.jpg
-- name: oldroad-old-road-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crabapple.jpg
-- name: status-berlin-status-berlin-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-graham-sutherland.jpg
-- name: old-gas-pumps-oldgaspumps-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-ww2-dresden.jpg
-- name: cargo-ship-cargo-ship-on-sea-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-atari-missle.jpg
-- name: gypsy-wagon-gypsywagon-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-crafty-painting.jpg
-- name: beach-clouds-lifeguard-beachclouds-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purp-paper.jpg
-- name: border-fence-border-fence-on-hill-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-crabapple.jpg
-- name: old-granary-field-oldhouse-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-mucha-mult.jpg
-- name: miamibeach-miamibeach-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-rainbow-festival.jpg
-- name: copper-circuit-IMG_8494.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_8494.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crunch-paper.jpg
-- name: aws-s3-riverrapids-riverrapids-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-riverrapids-riverrapids-still.jpg
-- name: machine-road-machine-road-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purple-storm.jpg
-- name: catacombs-catacombs-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-atari-missle.jpg
-- name: downtheline-downtheline-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-constitution.jpg
-- name: blossombar-crafty-painting-file-00-00-50-32.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-32.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-blue-electricity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-electricity.JPG
-- name: san-francisco-skyline-night-san-francisco-skyline-night-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-constitution.jpg
-- name: curtain-curtain-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-electricity.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-deep-connections.jpg
+- name: blossombar-crafty-painting-file-00-00-50-45.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-45.jpg
+- name: udnie-IMG_4833.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4833.jpg
+- name: razorwire-DSC-0080-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-satan-red.jpg
+- name: old-school-house-old-schoolhouse-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-attack-planes.jpg
+- name: fence-mexico-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-alien-goggles.jpg
+- name: crow-crow-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-hot-spicy.jpg
+- name: paris-paris-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-rainbow-festival.jpg
+- name: amusement-park-amusement-park-2-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-neo-instinct.jpg
+- name: miamibeach-miamibeach-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-aqua.jpg
+- name: catacombs-catacombs-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-cinnamon-rolls.jpg
+- name: ellis-island-ellis-island-room-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-dali.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
+- name: border-fence-border-fence-on-hill-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-far-away.jpg
+- name: school-clouds-church-clouds-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-graham-sutherland.jpg
+- name: birdhouse-birdhouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kand-two.jpg
+- name: amusement-park-amusement-park-2-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-space-pizza.jpg
+- name: gears-4882162452-fa3126b38d-b-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crunch-paper.jpg
+- name: aws-s3-stories-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-diego-rivera1.jpg
+- name: lincoln-memorial-lincolnmemorial-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-ww2-dresden.jpg
+- name: curtain-curtain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dry-skin.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
+- name: gears-4882162452-fa3126b38d-b-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-colorful-blocks.jpg
+- name: carry-load-carryload-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-color.jpg
+- name: aws-s3-stories-new-power-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-power-colorful-blocks.jpg
+- name: store-on-corner-oldcabin-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-clean-view.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-brush.jpg
+- name: berlinwall-DSC-0084-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-cinnamon-rolls.jpg
+- name: flower-barbed-wire-flower-barbed-wire-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-nazi-poster.jpg
+- name: containership-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
+- name: sand-hand-sand-hand-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-bright-sand.jpg
+- name: windowmountain-window-mountain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dry-skin.jpg
+- name: old-school-house-old-schoolhouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-marcel-duchamp.jpg
+- name: statue-of-liberty-front-view-statueofliberty-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sunday.jpg
+- name: capital-battle-capitolbattle-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-sunday.jpg
+- name: old-school-house-old-schoolhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colorful-dream.jpg
+- name: blossombar-plentiful-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-plentiful-file-00-00-50-62.jpg
+- name: power-lines-power-lines-empty-space-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-neo-instinct.jpg
+- name: statue-of-liberty-front-view-statueofliberty-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-mucha-mult.jpg
+- name: old-door-lock-old-door-lock-2-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-diego-rivera1.jpg
+- name: server-cloud-server-racks-clouds-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-gred-mash.jpg
+- name: docks-docks-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-neo-instinct.jpg
+- name: server-cloud-server-racks-door-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-rainbow-festival.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-yellow-paper.jpg
+- name: sand-hand-sand-hand-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-rainbow-festival.jpg
+- name: oldhotel-oldhotel-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-umberto-bocc.jpg
+- name: nyc-flag-nycflag-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-dali.jpg
+- name: containership-containership-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smooth-ride.jpg
+- name: locked-up-steam-lock-up-steam-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-soul.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
+- name: old-gas-pumps-oldgaspumps-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-graham-sutherland.jpg
 ---
 Wednesday's La Porte County Fair Schedule.&nbsp;German Leader Merkel Seen Shaking For 3rd Time In A Month.&nbsp;Booker Speechless Over McConnell Slaveholder Comment.&nbsp;Trump Directing Government To Revamp Care For Kidney Disease.&nbsp;Holocaust Survivor And Forgiveness Advocate, Eva Kor.&nbsp;Sturgeon, America's Forgotten Dinosaurs, Show Signs Of Life.&nbsp;Judge Blocks Government Lawyers From Quitting Census Fight.&nbsp;Vendor Threatens Suit Over Jamboree Ejection.&nbsp;
